--- a/styles/scss/_lnet-type.scss
+++ b/styles/scss/_lnet-type.scss
@@ -66,6 +66,13 @@ a:hover{
 
 [data-toggle='collapse']:hover {cursor:pointer;}
 
+input[type="radio"],
+input[type="checkbox"] {
+    margin-right: 0.25rem;
+}
+
+input + label {margin-bottom: 0;}
+
 .leg-portal-header {
     color: $gray-700;    
     a{
